--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,9 @@
+:root {
+  --color-title: #141414;
+  --color-nav: #0bb783;
+  --color-bg: #f7f2ed;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
