--- a/less/ItemCustomer.less
+++ b/less/ItemCustomer.less
@@ -1,5 +1,4 @@
 .card {
-  background-color: aliceblue;
   height: 100%;
   width: 100%;
   display: flex;
@@ -11,19 +10,31 @@
   .card_header {
     display: flex;
     width: 100%;
-    height: 25%;
-    background-color: aqua;
+    height: 20%;
 
     .card_hd_left {
       width: 70%;
+      display: flex;
+      align-items: center;
 
-      background-color: cadetblue;
+      color: #b8bccc;
+      text-transform: capitalize;
+      font-size: 15.5px;
+      font-weight: 500;
     }
     .card_hd_right {
       width: 30%;
-      background-color: chartreuse;
+
       display: flex;
-      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .logo {
+        height: 50px;
+        width: 50px;
+        background-color: var(--color-user-type-4);
+        padding: 10px;
+        border-radius: 7px;
+      }
     }
   }
   // card main
@@ -32,21 +43,31 @@
   .card_main {
     display: flex;
     width: 100%;
-    height: 50%;
-    background-color: brown;
+    height: 60%;
 
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     .card_m_title {
       height: 50%;
-      width: 100%;
-      background-color: darkblue;
+      width: 60%;
+
+      display: flex;
+      align-items: center;
+      font-size: 18px;
+      font-weight: 500;
+      color: var(--color-title);
+      transition: 0.13s;
+      &:hover {
+        cursor: pointer;
+        color: var(--color-nav);
+      }
     }
     .card_m_content {
       height: 50%;
-      width: 100%;
-      background-color: darkgoldenrod;
+      width: 85%;
+      color: #7e8299;
+      font-size: 16px;
     }
   }
   // card footer
@@ -58,26 +79,24 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 25%;
-    background-color: darkgreen;
+    height: 20%;
 
     .card_ft_user {
       height: 70%;
       width: 100%;
-      background-color: darkmagenta;
+
       display: flex;
       justify-content: flex-start;
       align-items: center;
       flex-wrap: wrap;
       .virtual_user {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        margin-right: 10px;
         height: 50px;
         width: 50px;
-        background-color: pink;
-        margin-right: 10px;
-        border-radius: 10px;
+        background-color: var(--color-user-type-4);
+        padding: 10px;
+        border-radius: 7px;
+        cursor: pointer;
         &:last-child {
           margin-right: 0;
         }
