--- a/sass/ItemMonthlySubscription.module.css
+++ b/sass/ItemMonthlySubscription.module.css
@@ -1,68 +1,69 @@
-.card {
+.ListItemMonthlySubscription .card {
   background-color: aliceblue;
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
 }
-.card .card_header {
+.ListItemMonthlySubscription .card .card_header {
   display: flex;
   width: 100%;
   background-color: aqua;
-  flex-grow: 1;
+  min-height: 30%;
 }
-.card .card_header .card_hd_left {
-  width: 30%;
-  background-color: cadetblue;
+.ListItemMonthlySubscription .card .card_header .card_hd_left {
+  width: 80px;
+  height: 100%;
+  background-color: chartreuse;
 }
-.card .card_header .card_hd_right {
+.ListItemMonthlySubscription .card .card_header .card_hd_right {
   width: 70%;
   background-color: chartreuse;
   display: flex;
   flex-direction: column;
 }
-.card .card_header .card_hd_right .card_hd_title {
+.ListItemMonthlySubscription .card .card_header .card_hd_right .card_hd_title {
   height: 70%;
   background-color: chocolate;
 }
-.card .card_header .card_hd_right .card_hd_date {
+.ListItemMonthlySubscription .card .card_header .card_hd_right .card_hd_date {
   height: 30%;
   background-color: crimson;
 }
-.card .card_main {
+.ListItemMonthlySubscription .card .card_main {
   display: flex;
   width: 100%;
+  height: 35%;
   background-color: brown;
-  flex-grow: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.card .card_main .card_m_title {
+.ListItemMonthlySubscription .card .card_main .card_m_title {
   height: 50%;
   width: 100%;
   background-color: darkblue;
 }
-.card .card_main .card_m_progress {
+.ListItemMonthlySubscription .card .card_main .card_m_progress {
   height: 50%;
   width: 100%;
   background-color: darkgoldenrod;
 }
-.card .card_footer {
+.ListItemMonthlySubscription .card .card_footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 35%;
   background-color: darkgreen;
-  flex-grow: 1;
 }
-.card .card_footer .card_ft_team {
+.ListItemMonthlySubscription .card .card_footer .card_ft_team {
   height: 30%;
   width: 100%;
   background-color: darkkhaki;
 }
-.card .card_footer .card_ft_user {
+.ListItemMonthlySubscription .card .card_footer .card_ft_user {
   height: 70%;
   width: 100%;
   background-color: darkmagenta;
@@ -70,7 +71,7 @@
   justify-content: flex-start;
   align-items: center;
 }
-.card .card_footer .card_ft_user .virtual_user {
+.ListItemMonthlySubscription .card .card_footer .card_ft_user .virtual_user {
   display: flex;
   height: 60px;
   width: 60px;
@@ -78,7 +79,7 @@
   margin-right: 10px;
   border-radius: 10px;
 }
-.card .card_footer .card_ft_user .virtual_user:last-child {
+.ListItemMonthlySubscription .card .card_footer .card_ft_user .virtual_user:last-child {
   margin-right: 0;
 }
 
