--- a/sass/ItemMonthlySubscription.scss
+++ b/sass/ItemMonthlySubscription.scss
@@ -1,91 +1,97 @@
-.card {
-  background-color: aliceblue;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-
-  // card header
-  // card header
-  // card header
-  .card_header {
-    display: flex;
+.ListItemMonthlySubscription {
+  .card {
+    background-color: aliceblue;
+    height: 100%;
     width: 100%;
-    background-color: aqua;
-    flex-grow: 1;
-    .card_hd_left {
-      width: 30%;
-      background-color: cadetblue;
+    display: flex;
+    flex-direction: column;
+
+    // card header
+    // card header
+    // card header
+    .card_header {
+      display: flex;
+      width: 100%;
+      background-color: aqua;
+      min-height: 30%;
+      .card_hd_left {
+        width: 80px;
+        height: 100%;
+        background-color: chartreuse;
+      }
+      .card_hd_right {
+        width: 70%;
+        background-color: chartreuse;
+        display: flex;
+        flex-direction: column;
+        .card_hd_title {
+          height: 70%;
+          background-color: chocolate;
+        }
+        .card_hd_date {
+          height: 30%;
+          background-color: crimson;
+        }
+      }
     }
-    .card_hd_right {
-      width: 70%;
-      background-color: chartreuse;
+
+    // card main
+    // card main
+    // card main
+    .card_main {
+      display: flex;
+      width: 100%;
+      height: 35%;
+      background-color: brown;
+
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .card_m_title {
+        height: 50%;
+        width: 100%;
+        background-color: darkblue;
+      }
+      .card_m_progress {
+        height: 50%;
+        width: 100%;
+        background-color: darkgoldenrod;
+      }
+    }
+    // card footer
+    // card footer
+    // card footer
+    .card_footer {
       display: flex;
       flex-direction: column;
-      .card_hd_title {
-        height: 70%;
-        background-color: chocolate;
-      }
-      .card_hd_date {
-        height: 30%;
-        background-color: crimson;
-      }
-    }
-  }
-  // card main
-  // card main
-  // card main
-  .card_main {
-    display: flex;
-    width: 100%;
-    background-color: brown;
-    flex-grow: 1;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    .card_m_title {
-      height: 50%;
-      width: 100%;
-      background-color: darkblue;
-    }
-    .card_m_progress {
-      height: 50%;
-      width: 100%;
-      background-color: darkgoldenrod;
-    }
-  }
-  // card footer
-  // card footer
-  // card footer
-  .card_footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    background-color: darkgreen;
-    flex-grow: 1;
-    .card_ft_team {
-      height: 30%;
-      width: 100%;
-      background-color: darkkhaki;
-    }
-    .card_ft_user {
-      height: 70%;
-      width: 100%;
-      background-color: darkmagenta;
-      display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
-      .virtual_user {
+      width: 100%;
+      height: 35%;
+      background-color: darkgreen;
+
+      .card_ft_team {
+        height: 30%;
+        width: 100%;
+        background-color: darkkhaki;
+      }
+      .card_ft_user {
+        height: 70%;
+        width: 100%;
+        background-color: darkmagenta;
         display: flex;
-        height: 60px;
-        width: 60px;
-        background-color: pink;
-        margin-right: 10px;
-        border-radius: 10px;
-        &:last-child {
-          margin-right: 0;
+        justify-content: flex-start;
+        align-items: center;
+        .virtual_user {
+          display: flex;
+          height: 60px;
+          width: 60px;
+          background-color: pink;
+          margin-right: 10px;
+          border-radius: 10px;
+          &:last-child {
+            margin-right: 0;
+          }
         }
       }
     }
