--- a/less/ItemCustomer.less
+++ b/less/ItemCustomer.less
@@ -10,10 +10,10 @@
   .card_header {
     display: flex;
     width: 100%;
-    height: 20%;
+    height: 10%;
 
     .card_hd_left {
-      width: 70%;
+      width: 80%;
       display: flex;
       align-items: center;
 
@@ -23,7 +23,7 @@
       font-weight: 500;
     }
     .card_hd_right {
-      width: 30%;
+      width: 20%;
 
       display: flex;
       justify-content: center;
@@ -43,19 +43,19 @@
   .card_main {
     display: flex;
     width: 100%;
-    height: 60%;
+    height: 75%;
 
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     .card_m_title {
-      height: 50%;
+      height: 45%;
       width: 60%;
 
       display: flex;
       align-items: center;
       font-size: 18px;
-      font-weight: 500;
+      font-weight: bold;
       color: var(--color-title);
       transition: 0.13s;
       &:hover {
@@ -64,8 +64,8 @@
       }
     }
     .card_m_content {
-      height: 50%;
-      width: 85%;
+      height: 55%;
+      width: 92%;
       color: #7e8299;
       font-size: 16px;
     }
@@ -79,7 +79,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 20%;
+    height: 15%;
 
     .card_ft_user {
       height: 70%;
