--- a/sass/ItemMonthlySubscription.module.css
+++ b/sass/ItemMonthlySubscription.module.css
@@ -1,85 +1,101 @@
-.ListItemMonthlySubscription .card {
-  background-color: aliceblue;
+.card {
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
 }
-.ListItemMonthlySubscription .card .card_header {
+.card .card_header {
   display: flex;
   width: 100%;
-  background-color: aqua;
-  min-height: 30%;
 }
-.ListItemMonthlySubscription .card .card_header .card_hd_left {
+.card .card_header .card_hd_left {
   width: 80px;
-  height: 100%;
-  background-color: chartreuse;
+  height: 95%;
+  padding: 20px;
+  border-radius: 10px;
 }
-.ListItemMonthlySubscription .card .card_header .card_hd_right {
+.card .card_header .card_hd_right {
   width: 70%;
-  background-color: chartreuse;
   display: flex;
   flex-direction: column;
 }
-.ListItemMonthlySubscription .card .card_header .card_hd_right .card_hd_title {
+.card .card_header .card_hd_right .card_hd_title {
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  font-weight: bold;
+  color: var(--color-title);
   height: 70%;
-  background-color: chocolate;
+  width: 90%;
+  font-size: 18px;
+  padding-left: 20px;
 }
-.ListItemMonthlySubscription .card .card_header .card_hd_right .card_hd_date {
+.card .card_header .card_hd_right .card_hd_title:hover {
+  cursor: pointer;
+  color: var(--color-nav);
+}
+.card .card_header .card_hd_right .card_hd_date {
+  padding-left: 20px;
   height: 30%;
-  background-color: crimson;
+  font-weight: 500;
+  font-size: 15px;
+  color: #b8bccc;
 }
-.ListItemMonthlySubscription .card .card_main {
+.card .card_main {
+  margin: 30px 0;
   display: flex;
   width: 100%;
-  height: 35%;
-  background-color: brown;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.ListItemMonthlySubscription .card .card_main .card_m_title {
+.card .card_main .card_m_title {
   height: 50%;
   width: 100%;
-  background-color: darkblue;
+  display: flex;
+  align-items: center;
+  color: var(--color-title);
+  text-transform: capitalize;
+  font-weight: bold;
+  font-size: 15px;
+  margin-bottom: 15px;
 }
-.ListItemMonthlySubscription .card .card_main .card_m_progress {
+.card .card_main .card_m_progress {
   height: 50%;
   width: 100%;
-  background-color: darkgoldenrod;
 }
-.ListItemMonthlySubscription .card .card_footer {
+.card .card_footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 35%;
-  background-color: darkgreen;
 }
-.ListItemMonthlySubscription .card .card_footer .card_ft_team {
+.card .card_footer .card_ft_team {
   height: 30%;
   width: 100%;
-  background-color: darkkhaki;
+  color: var(--color-title);
+  font-weight: bold;
+  font-size: 15px;
+  margin-bottom: 10px;
 }
-.ListItemMonthlySubscription .card .card_footer .card_ft_user {
+.card .card_footer .card_ft_user {
   height: 70%;
   width: 100%;
-  background-color: darkmagenta;
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
-.ListItemMonthlySubscription .card .card_footer .card_ft_user .virtual_user {
+.card .card_footer .card_ft_user .virtual_user {
   display: flex;
-  height: 60px;
-  width: 60px;
-  background-color: pink;
+  height: 50px;
+  width: 50px;
+  padding: 10px;
   margin-right: 10px;
   border-radius: 10px;
 }
-.ListItemMonthlySubscription .card .card_footer .card_ft_user .virtual_user:last-child {
+.card .card_footer .card_ft_user .virtual_user:last-child {
   margin-right: 0;
 }
 
