--- a/sass/NewArrivals.module.css
+++ b/sass/NewArrivals.module.css
@@ -5,7 +5,6 @@
 .card .card_header {
   width: 100%;
   height: 80px;
-  background-color: skyblue;
   display: flex;
 }
 .card .card_header .card_hd_left {
@@ -22,17 +21,18 @@
   color: var(--color-title);
   width: 100%;
   height: 50%;
-  background-color: slategray;
 }
 .card .card_header .card_hd_left .card_hd_l_bottom {
   width: 100%;
   height: 50%;
-  background-color: springgreen;
+  color: #b5b5c3c0;
+  font-weight: bold;
+  text-transform: capitalize;
+  font-size: 12px;
 }
 .card .card_header .card_hd_right {
   width: 30%;
   height: 100%;
-  background-color: steelblue;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -40,22 +40,25 @@
 .card .card_header .card_hd_right .btn {
   padding: 10px;
   margin: 10px;
-  background-color: var(--color-nav);
-  color: white;
+  color: #b5b5c3;
   text-transform: capitalize;
   cursor: pointer;
+}
+.card .card_header .card_hd_right .btn:hover {
+  color: var(--color-nav);
+}
+.card .card_header .card_hd_right .time_on_focus {
+  background-color: var(--color-nav);
 }
 .card .card_main {
   width: 100%;
   min-height: 100px;
-  background-color: slateblue;
   display: flex;
   flex-wrap: wrap;
 }
 .card .card_main .item {
   width: 100%;
   height: 70px;
-  border: 1px solid #000;
   display: flex;
   margin-bottom: 20px;
 }
@@ -69,31 +72,48 @@
   display: flex;
   width: 50%;
   height: 100%;
-  background-color: steelblue;
 }
-.card .card_main .item .item_left .item_l_left {
+.card .card_main .item .item_left .item_logo {
   height: 100%;
-  width: 25%;
-  background-color: thistle;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card .card_main .item .item_left .item_logo .item_l_left {
+  height: 50px;
+  width: 50px;
+  background-color: #f3f6f9;
+  padding: 10px;
 }
 .card .card_main .item .item_left .item_l_right {
   height: 100%;
   width: 75%;
-  background-color: tomato;
   display: flex;
   flex-direction: column;
 }
 .card .card_main .item .item_left .item_l_right .item_title {
   width: 100%;
   height: 50%;
-  background-color: turquoise;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+  text-transform: capitalize;
+  font-weight: bold;
+  color: var(--color-title);
+  padding-left: 10px;
+  font-size: 15px;
+}
+.card .card_main .item .item_left .item_l_right .item_title:hover {
+  cursor: pointer;
+  color: var(--color-nav);
 }
 .card .card_main .item .item_left .item_l_right .item_status {
   width: 100%;
   height: 50%;
-  background-color: violet;
+  text-transform: capitalize;
+  font-weight: bold;
+  color: #b5b5c3;
+  padding-left: 10px;
+  font-size: 14px;
 }
 .card .card_main .item .item_mid {
   display: flex;
@@ -101,13 +121,14 @@
   justify-content: center;
   width: 25%;
   height: 100%;
-  background-color: tan;
+  font-size: 14px;
+  color: #b5b5c3;
+  font-weight: bold;
 }
 .card .card_main .item .item_right {
   display: flex;
   width: 25%;
   height: 100%;
-  background-color: teal;
 }
 .card .card_main .item .item_right .item_total_user {
   display: flex;
@@ -115,15 +136,28 @@
   justify-content: center;
   width: 50%;
   height: 100%;
-  background-color: white;
+  font-size: 14px;
+  color: #b5b5c3;
+  font-weight: bold;
 }
-.card .card_main .item .item_right .item_btn {
+.card .card_main .item .item_right .btn_wrap {
+  width: 50%;
+  height: 100%;
   justify-content: center;
   align-items: center;
   display: flex;
-  width: 50%;
-  height: 100%;
-  background-color: yellow;
+}
+.card .card_main .item .item_right .btn_wrap .item_btn {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 40px;
+  width: 40px;
+  border-radius: 7px;
+  background-color: #f3f6f9;
+}
+.card .card_main .item .item_right .btn_wrap .item_btn:hover {
+  background-color: #c2c8ce;
 }
 
 /*# sourceMappingURL=NewArrivals.module.css.map */
