--- a/sass/NewArrivals.scss
+++ b/sass/NewArrivals.scss
@@ -198,3 +198,28 @@
     }
   }
 }
+
+.green {
+  background-color: var(--color-nav);
+  border-radius: 8px;
+  color: white !important;
+}
+
+/* animation for New Arrivals Component*/
+/* this class is used to hidden the redundancy div */
+.d_none {
+  display: none;
+}
+
+.appear_1 {
+  animation: appear 0.8s forwards;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
