--- a/sass/Statistical.module.css
+++ b/sass/Statistical.module.css
@@ -5,7 +5,6 @@
 .card .card_header {
   height: 80px;
   width: 100%;
-  background-color: pink;
   display: flex;
 }
 .card .card_header .card_hd_left {
@@ -35,7 +34,19 @@
   display: flex;
   width: 30%;
   height: 100%;
-  background-color: purple;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.card .card_header .card_hd_right .three_dot_wrapper {
+  height: 50px;
+  width: 50px;
+  padding: 13px;
+  border-radius: 8px;
+}
+.card .card_header .card_hd_right .three_dot_wrapper:hover {
+  cursor: pointer;
+  background-color: #f3f6f9;
 }
 .card .card_main {
   min-height: 300px;
@@ -51,9 +62,8 @@
   background-color: saddlebrown;
 }
 .card .card_footer {
-  min-height: 150px;
+  min-height: 201px;
   width: 100%;
-  background-color: powderblue;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -62,33 +72,45 @@
 .card .card_footer .card_ft_item {
   height: 50px;
   width: 50%;
-  background-color: sandybrown;
-  border: 1px solid #000;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .card .card_footer .card_ft_item .card_ft_item_left {
-  width: 30%;
+  width: 28%;
   height: 50px;
   background-color: seagreen;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
 }
 .card .card_footer .card_ft_item .card_ft_item_right {
   width: 70%;
   height: 50px;
-  background-color: seashell;
   display: flex;
   flex-direction: column;
 }
 .card .card_footer .card_ft_item .card_ft_item_right .card_ft_item_r_top {
   width: 100%;
   height: 50px;
-  background-color: sienna;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 10px;
+  font-weight: bold;
+  color: var(--color-title);
+  font-size: 18px;
 }
 .card .card_footer .card_ft_item .card_ft_item_right .card_ft_item_r_bottom {
   width: 100%;
   height: 50px;
-  background-color: silver;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 10px;
+  font-weight: 500;
+  color: #b5b5c3 !important;
+  font-size: 15px;
 }
 
 /*# sourceMappingURL=Statistical.module.css.map */
