--- a/sass/Statistical.scss
+++ b/sass/Statistical.scss
@@ -17,7 +17,7 @@
   .card_header {
     height: 80px;
     width: 100%;
-    background-color: pink;
+
     display: flex;
 
     .card_hd_left {
@@ -47,7 +47,20 @@
       display: flex;
       width: 30%;
       height: 100%;
-      background-color: purple;
+
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      .three_dot_wrapper {
+        height: 50px;
+        width: 50px;
+        padding: 13px;
+        border-radius: 8px;
+        &:hover {
+          cursor: pointer;
+          background-color: #f3f6f9;
+        }
+      }
     }
   }
   // card main
@@ -68,37 +81,51 @@
   // card footer
   // card footer
   .card_footer {
-    min-height: 150px;
+    min-height: 201px;
     width: 100%;
-    background-color: powderblue;
+
     @include flexCenter();
     flex-wrap: wrap;
     .card_ft_item {
       height: 50px;
       width: 50%;
-      background-color: sandybrown;
-      border: 1px solid #000;
+
       @include flexCenter();
       .card_ft_item_left {
-        width: 30%;
+        width: 28%;
         height: 50px;
         background-color: seagreen;
+        @include flexCenter();
+        border-radius: 8px;
       }
       .card_ft_item_right {
         width: 70%;
         height: 50px;
-        background-color: seashell;
+
         display: flex;
         flex-direction: column;
         .card_ft_item_r_top {
           width: 100%;
           height: 50px;
-          background-color: sienna;
+
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          padding-left: 10px;
+          font-weight: bold;
+          color: var(--color-title);
+          font-size: 18px;
         }
         .card_ft_item_r_bottom {
           width: 100%;
           height: 50px;
-          background-color: silver;
+
+          justify-content: flex-start;
+          align-items: center;
+          padding-left: 10px;
+          font-weight: 500;
+          color: #b5b5c3 !important;
+          font-size: 15px;
         }
       }
     }
