--- a/sass/Statistical.module.css
+++ b/sass/Statistical.module.css
@@ -149,67 +149,67 @@
   justify-content: center;
   align-items: center;
 }
-.box .percent #pc_60 circle {
+.box .percent .pc_60 circle {
   stroke-dasharray: 520;
   stroke-dashoffset: 520;
 }
-.box .percent #pc_60 circle:nth-child(1) {
+.box .percent .pc_60 circle:nth-child(1) {
   stroke-dashoffset: 0;
   stroke: #f3f3f3;
 }
-.box .percent #pc_60 circle:nth-child(2) {
+.box .percent .pc_60 circle:nth-child(2) {
   stroke-dashoffset: calc(520 - (520 * 60 / 100));
   stroke: rgba(137, 80, 252, 0.85);
 }
-.box .percent #pc_60 circle:nth-child(2):hover {
+.box .percent .pc_60 circle:nth-child(2):hover {
   stroke: rgba(137, 80, 252, 0.55);
 }
-.box .percent #pc_60 #pc_50 circle {
+.box .percent .pc_60 .pc_50 circle {
   stroke-dasharray: 410;
   stroke-dashoffset: 410;
   stroke: rgba(246, 78, 96, 0.85);
 }
-.box .percent #pc_60 #pc_50 circle:nth-child(1) {
+.box .percent .pc_60 .pc_50 circle:nth-child(1) {
   stroke-dashoffset: 0;
   stroke: #f3f3f3;
 }
-.box .percent #pc_60 #pc_50 circle:nth-child(2) {
+.box .percent .pc_60 .pc_50 circle:nth-child(2) {
   stroke-dashoffset: calc(410 - (410 * 50 / 100));
   stroke: rgba(246, 78, 96, 0.85);
 }
-.box .percent #pc_60 #pc_50 circle:nth-child(2):hover {
+.box .percent .pc_60 .pc_50 circle:nth-child(2):hover {
   stroke: rgba(246, 78, 96, 0.55);
 }
-.box .percent #pc_60 #pc_50 #pc_75 circle {
+.box .percent .pc_60 .pc_50 .pc_75 circle {
   stroke-dasharray: 320;
   stroke-dashoffset: 320;
   stroke: rgba(27, 197, 189, 0.85);
 }
-.box .percent #pc_60 #pc_50 #pc_75 circle:nth-child(1) {
+.box .percent .pc_60 .pc_50 .pc_75 circle:nth-child(1) {
   stroke-dashoffset: 0;
   stroke: #f3f3f3;
 }
-.box .percent #pc_60 #pc_50 #pc_75 circle:nth-child(2) {
+.box .percent .pc_60 .pc_50 .pc_75 circle:nth-child(2) {
   stroke-dashoffset: calc(320 - (320 * 75 / 100));
   stroke: rgba(27, 197, 189, 0.85);
 }
-.box .percent #pc_60 #pc_50 #pc_75 circle:nth-child(2):hover {
+.box .percent .pc_60 .pc_50 .pc_75 circle:nth-child(2):hover {
   stroke: rgba(27, 197, 189, 0.55);
 }
-.box .percent #pc_60 #pc_50 #pc_75 #pc_80 circle {
+.box .percent .pc_60 .pc_50 .pc_75 .pc_80 circle {
   stroke-dasharray: 220;
   stroke-dashoffset: 220;
   stroke: rgba(11, 183, 131, 0.85);
 }
-.box .percent #pc_60 #pc_50 #pc_75 #pc_80 circle:nth-child(1) {
+.box .percent .pc_60 .pc_50 .pc_75 .pc_80 circle:nth-child(1) {
   stroke-dashoffset: 0;
   stroke: #f3f3f3;
 }
-.box .percent #pc_60 #pc_50 #pc_75 #pc_80 circle:nth-child(2) {
+.box .percent .pc_60 .pc_50 .pc_75 .pc_80 circle:nth-child(2) {
   stroke-dashoffset: calc(220 - (220 * 80 / 100));
   stroke: rgba(11, 183, 131, 0.85);
 }
-.box .percent #pc_60 #pc_50 #pc_75 #pc_80 circle:nth-child(2):hover {
+.box .percent .pc_60 .pc_50 .pc_75 .pc_80 circle:nth-child(2):hover {
   stroke: rgba(11, 183, 131, 0.55);
 }
 
