--- a/less/ItemCustomer.less
+++ b/less/ItemCustomer.less
@@ -1,5 +1,5 @@
 .card {
-  height: 400px;
+  min-height: 300px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -45,6 +45,7 @@
     width: 100%;
     height: 75%;
 
+    padding: 30px 0;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
