--- a/less/ItemCustomer.module.css
+++ b/less/ItemCustomer.module.css
@@ -1,5 +1,5 @@
 .card {
-  height: 400px;
+  min-height: 300px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -35,6 +35,7 @@
   display: flex;
   width: 100%;
   height: 75%;
+  padding: 30px 0;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
